20181207: router && event sevice

--- a/src/app/first-child-router/first-child.component.html
+++ b/src/app/first-child-router/first-child.component.html
@@ -1,4 +1,8 @@
+
 <div>
-    <h3>{{ username }}</h3>
+    Count: {{count}}
 </div>
-<hr>
+
+<form-template [formData]="formData"></form-template>
+<router-outlet></router-outlet>
+<hr style="color: aqua">
