--- a/src/app/first-child-router/otis/otis.component.html
+++ b/src/app/first-child-router/otis/otis.component.html
@@ -1,3 +1,12 @@
 <div>
-    {{username}}
+    Otis Child
 </div>
+<hr style="color: aqua">
+<div>
+    <h3>User Name : {{ username }}</h3>
+</div>
+<div>
+    <h4>This is settings</h4>
+</div>
+<form-template [formData]="formData"></form-template>
+<hr>
