20181209: resolve multi-subscribe error by using subjection as return value of subsribe

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,11 +9,11 @@
   <button type="button" (click)="routeHomeClicked()">
     Home
   </button>
-  <button type="button" (click)="routeFatherClicked()">
-    Router Father
+  <button type="button" (click)="routeOtisClicked()">
+    Router Otis
   </button>
-  <button type="button" (click)="routeChildClicked()">
-    Router Child
+  <button type="button" (click)="routeCindyClicked()">
+    Router Cindy
   </button>
 </div>
 
@@ -33,5 +33,5 @@
 </div>
 
 <!-- <input-template [inputData]="input"></input-template> -->
-
+<hr>
 <router-outlet></router-outlet>
