--- a/src/app/common/pretty-button.component.html
+++ b/src/app/common/pretty-button.component.html
@@ -1,3 +1,6 @@
 <div>
-    <button type="button" (click)="buttonClicked()">buttonName</button>
+    <button type="button" (click)="buttonClicked()">Count+1</button>
+</div>  
+<div>
+    <button type="button" (click)="otis2cindy()">otis->cindy</button>
 </div>  
