--- a/src/app/first-child-router/otis/otis.component.html
+++ b/src/app/first-child-router/otis/otis.component.html
@@ -1,12 +1,5 @@
+
 <div>
-    Otis Child
-</div>
-<hr style="color: aqua">
-<div>
-    <h3>User Name : {{ username }}</h3>
-</div>
-<div>
-    <h4>This is settings</h4>
+    <h4>This is Otis</h4>
 </div>
 <form-template [formData]="formData"></form-template>
-<hr>
